apps/arcs/xi/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-xi
  labels:
    sage.arc: "true"
    arc.name: "xi"
